syntax = "proto3"; //指定proto版本
package emoji_rpc;

option go_package = "./emoji_rpc";

// 获取用户表情数据同步摘要（包含所有相关数据）
message GetUserEmojiSyncReq {
  string userId = 1; // 用户ID
  int64 since = 2; // 从这个版本号之后获取变更
  int32 limit = 3; // 最大返回数量限制，默认1000
}

message GetUserEmojiSyncRes {
  repeated EmojiCollectVersionItem emojiCollectVersions = 1; // 用户收藏的表情变更
  repeated EmojiPackageCollectVersionItem emojiPackageCollectVersions = 2; // 用户收藏的表情包变更
  repeated EmojiVersionItem emojiVersions = 3; // 表情基础数据变更（用户相关的）
  repeated EmojiPackageVersionItem emojiPackageVersions = 4; // 表情包基础数据变更（用户相关的）
  repeated EmojiPackageContentVersionItem emojiPackageContentVersions = 5; // 表情包内容变更（用户相关的）
  int64 serverTimestamp = 6; // 服务端时间戳
  bool hasMore = 7; // 是否还有更多数据
}

// 版本摘要数据结构
message EmojiVersionItem {
  uint32 id = 1; // 表情ID
  int64 version = 2; // 版本号
}

message EmojiPackageVersionItem {
  uint32 id = 1; // 表情包ID
  int64 version = 2; // 版本号
}

message EmojiPackageContentVersionItem {
  uint32 packageId = 1; // 表情包ID
  int64 version = 2; // 内容版本号
}

message EmojiCollectVersionItem {
  string uuid = 1; // 收藏记录UUID
  int64 version = 2; // 版本号
}

message EmojiPackageCollectVersionItem {
  string uuid = 1; // 收藏记录UUID
  int64 version = 2; // 版本号
}

service emoji {
  // 用户表情数据同步接口（为微服务架构设计）
  rpc GetUserEmojiSync(GetUserEmojiSyncReq) returns (GetUserEmojiSyncRes);
}

// goctl rpc protoc emoji_rpc.proto --go_out=./types --go-grpc_out=./types --zrpc_out=.