syntax = "proto3"; //指定proto版本
package user_rpc;

option go_package = "./user_rpc";


message UserCreateReq {
  string phone = 1;    // 手机号（与email二选一）
  string password = 2; // 密码
  int32 source = 3;    // 注册来源：1-手机号注册，2-邮箱注册
  string email = 4;    // 邮箱（与phone二选一）
  string nick_name = 5; // 昵称（可选）
}

message UserCreateRes {
  string userID = 1;
}

message UserInfoReq {
  string userID = 1;
}

message UserInfoRes {
  bytes data = 1;  //用户配置的json
 }
 

 message IsFriendReq {
  string user1 = 1;
  string user2 = 2;
}

message IsFriendRes {
  bool is_friend = 1;
}

message UserInfo {
  string nick_name = 1;
  string fileName = 2;

}

message UserListInfoReq {
  repeated string user_id_list = 1;
}

message UserListInfoRes {
  map<string, UserInfo> user_info = 1; //用户配置的json
}

service user {
  rpc UserCreate(UserCreateReq) returns(UserCreateRes); //创建用户
  rpc UserInfo(UserInfoReq) returns(UserInfoRes); // 用户信息
  rpc IsFriend(IsFriendReq) returns(IsFriendRes); //是否是好友
  rpc UserListInfo(UserListInfoReq) returns(UserListInfoRes); // 批量获取用户信息

}

//goctl rpc protoc user_rpc.proto --go_out=./types --go-grpc_out=./types --zrpc_out=.